Criando as labels e inputs no html

--- a/index.html
+++ b/index.html
@@ -7,14 +7,20 @@
 </head>
 <body>
     <div class="container">
-        <div id="red" class="_red">
-            
+        <div class="vermelho">
+            <label for="red">(R) Vermelho</label>
+            <input type="range" id="red" name="red" min="0" max="255">
+            <input type="text" id="redText" name="redText" disabled>
         </div>
-        <div id="green" class="_green">
-
+        <div class="verde">
+            <label for="green">(G) Verde</label>
+            <input type="range" id="green" name="green" min="0" max="255">
+            <input type="text" id="greenText" name="greenText" disabled>
         </div>
-        <div id="blue" class="_blue">
-
+        <div class="azul">
+            <label for="blue">(R) Vermelho</label>
+            <input type="range" id="blue" name="blue" min="0" max="255">
+            <input type="text" id="blueText" name="blueText" disabled>
         </div>
     </div>
 </body>
