--- a/index.html
+++ b/index.html
@@ -7,20 +7,22 @@
 </head>
 <body>
     <div class="container">
-        <div class="vermelho">
-            <label for="red">(R) Vermelho</label>
-            <input type="range" id="red" name="red" min="0" max="255">
-            <input type="text" id="redText" name="redText" disabled>
-        </div>
-        <div class="verde">
-            <label for="green">(G) Verde</label>
-            <input type="range" id="green" name="green" min="0" max="255">
-            <input type="text" id="greenText" name="greenText" disabled>
-        </div>
-        <div class="azul">
-            <label for="blue">(R) Vermelho</label>
-            <input type="range" id="blue" name="blue" min="0" max="255">
-            <input type="text" id="blueText" name="blueText" disabled>
+        <div class="box">
+            <div class="vermelho">
+                <label for="red">(R) Vermelho</label>
+                <input type="range" id="red" name="red" min="0" max="255">
+                <input type="text" id="redText" name="redText" disabled>
+            </div>
+            <div class="verde">
+                <label for="green">(G) Verde</label>
+                <input type="range" id="green" name="green" min="0" max="255">
+                <input type="text" id="greenText" name="greenText" disabled>
+            </div>
+            <div class="azul">
+                <label for="blue">(B) Blue</label>
+                <input type="range" id="blue" name="blue" min="0" max="255">
+                <input type="text" id="blueText" name="blueText" disabled>
+            </div>
         </div>
     </div>
 </body>
