--- a/index.html
+++ b/index.html
@@ -4,25 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
     <div class="container">
         <div class="box">
-            <div class="vermelho">
-                <label for="red">(R) Vermelho</label>
-                <input type="range" id="red" name="red" min="0" max="255">
-                <input type="text" id="redText" name="redText" disabled>
+            <div class="rgb">
+                <div class="vermelho">
+                    <label for="red">(R) Vermelho</label>
+                    <input type="range" id="red" name="red" min="0" max="255">
+                    <input type="text" id="redText" name="redText" disabled>
+                </div>
+                <div class="verde">
+                    <label for="green">(G) Verde</label>
+                    <input type="range" id="green" name="green" min="0" max="255">
+                    <input type="text" id="greenText" name="greenText" disabled>
+                </div>
+                <div class="azul">
+                    <label for="blue">(B) Blue</label>
+                    <input type="range" id="blue" name="blue" min="0" max="255">
+                    <input type="text" id="blueText" name="blueText" disabled>
+                </div>
             </div>
-            <div class="verde">
-                <label for="green">(G) Verde</label>
-                <input type="range" id="green" name="green" min="0" max="255">
-                <input type="text" id="greenText" name="greenText" disabled>
-            </div>
-            <div class="azul">
-                <label for="blue">(B) Blue</label>
-                <input type="range" id="blue" name="blue" min="0" max="255">
-                <input type="text" id="blueText" name="blueText" disabled>
-            </div>
+
+            <div id="colors" class="cores"></div>
         </div>
     </div>
 </body>
