--- a/index.html
+++ b/index.html
@@ -30,5 +30,7 @@
             <div id="colors" class="cores"></div>
         </div>
     </div>
+
+<script src="js/script.js"></script>
 </body>
 </html>
