Adicionando divs para alinhar e posicionar melhor os elementos

--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
     <div class="container">
         <div class="box">
             <div class="rgb">
-                <div class="vermelho">
-                    <label for="red">(R) Vermelho</label>
+                <div class="red">
+                    <p>(R) Vermelho</p>
                     <input type="range" id="red" name="red" min="0" max="255">
                     <input type="text" id="redText" name="redText" disabled>
                 </div>
-                <div class="verde">
-                    <label for="green">(G) Verde</label>
+                <div class="green">
+                    <p>(G) Verde</p>
                     <input type="range" id="green" name="green" min="0" max="255">
                     <input type="text" id="greenText" name="greenText" disabled>
                 </div>
-                <div class="azul">
-                    <label for="blue">(B) Blue</label>
-                    <input type="range" id="blue" name="blue" min="0" max="255">
-                    <input type="text" id="blueText" name="blueText" disabled>
+                <div class="blue">
+                    <div><p>(B) Blue</p></div>
+                    <div><input type="range" id="blue" name="blue" min="0" max="255"></div>
+                    <div><input type="text" id="blueText" name="blueText" disabled></div>
                 </div>
             </div>
 
