--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
             <div class="rgb">
                 <div class="red">
                     <p>(R) Vermelho</p>
-                    <div><input type="range" id="red" name="red" min="0" max="255" step="1"></div>
+                    <div><input type="range" id="red" class="range" name="red" min="0" max="255" step="1"></div>
                     <div><input type="text" id="redText" name="redText" class="value" readonly disabled></div>
                 </div>
                 <div class="green">
                     <p>(G) Verde</p>
-                    <div><input type="range" id="green" name="green" min="0" max="255" step="1"></div>
+                    <div><input type="range" id="green" class="range" name="green" min="0" max="255" step="1"></div>
                     <div><input type="text" id="greenText" name="greenText" class="value" readonly disabled></div>
                 </div>
                 <div class="blue">
                     <p>(B) Azul</p>
-                    <div><input type="range" id="blue" name="blue" min="0" max="255" step="1"></div>
+                    <div><input type="range" id="blue" class="range" name="blue" min="0" max="255" step="1"></div>
                     <div><input type="text" id="blueText" name="blueText" class="value" readonly disabled></div>
                 </div>
             </div>
