--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div class="container">
+        
+        <h1>RGB Color Selector</h1>
+
         <div class="box">
             <div class="rgb">
                 <div class="red">
