--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
 
             <div id="colors" class="cores"></div>
-            <div><input type="text" id="rgbValue" name="rgbValue" clas="rgb-value" readonly disabled></input></div>
+            <div><input type="text" id="rgbValue" name="rgbValue" class="rgb-value" readonly disabled></input></div>
         </div>
     </div>
 
