Colocando o input  do rgbValue e a caixa de cores dentro de umas div

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
                 </div>
             </div>
 
-            <div id="colors" class="cores"></div>
-            <div><input type="text" id="rgbValue" name="rgbValue" class="rgb-value" readonly></input></div>
+            <div class="result-rgb">
+                <div id="colors" class="cores"></div>
+                <div><input type="text" id="rgbValue" name="rgbValue" class="rgb-value" readonly></div>
+            </div>
         </div>
     </div>
 
