Tentando posicionar os elementos

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 </div>
             </div>
 
-            <div class="result-rgb col-sm">
+            <div class="result-rgb">
                 <div id="colors" class="cores"></div>
-                <div><input type="text" id="rgbValue" name="rgbValue" class="rgb-value" readonly></div>
+                <div class="rgb-value"><input type="text" id="rgbValue" name="rgbValue" readonly></div>
             </div>
         </div>
     </div>
