Deletando a estilização do rgb-value

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         
         <h1>RGB Color Selector</h1>
 
-        <div class="box row">
-            <div class="rgb col-sm">
+        <div class="box">
+            <div class="rgb">
                 <div class="red">
                     <p>(R) Vermelho</p>
                     <div><input type="range" id="red" class="range" name="red" min="0" max="255" step="1"></div>
