Editando a disposição das divs e trocando o input com o rgbValue por um parágrafo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Select RGB Colors</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -31,8 +31,9 @@
             </div>
 
             <div class="result-rgb">
-                <div id="colors" class="cores"></div>
-                <div class="rgb-value"><input type="text" id="rgbValue" name="rgbValue" readonly></div>
+                <div id="colors" class="cores">
+                    <p id="rgbValue" class="rgb-value">rgb()</p>
+                </div>
             </div>
         </div>
     </div>
