Tentativa de fazer rgba

--- a/index.html
+++ b/index.html
@@ -28,11 +28,16 @@
                     <div><input type="range" id="blue" class="range" name="blue" min="0" max="255" step="1"></div>
                     <div><input type="text" id="blueText" name="blueText" class="value" readonly disabled></div>
                 </div>
+                <!-- <div class="alpha">
+                    <p class="range-blue">(A) Alpha</p>
+                    <div><input type="range" id="alpha" class="range" name="alpha" min="0" max="1" step="0.0"></div>
+                    <div><input type="text" id="aplhaText" name="alphaText" class="value" readonly disabled></div>
+                </div> -->
             </div>
 
             <div class="result-rgb">
                 <div id="colors" class="cores">
-                    <p id="rgbValue" class="rgb-value">rgb()</p>
+                    <p id="rgbValue" class="rgb-value">rgb( ,  ,  )</p>
                 </div>
             </div>
         </div>
